# trustzone-m-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
non-secure-app/: Cargo.toml  build.rs  memory.x
non-secure-app/.cargo/: config.toml
non-secure-app/src/: main.rs
secure-app/: .gitignore  Cargo.toml  build.rs  memory.x
secure-app/.cargo/: config.toml
secure-app/src/: main.rs  mpc.rs  spcb.rs
xtask/: Cargo.toml
xtask/src/: main.rs
