[workspace]
members = [
    "secure-app",
    "non-secure-app",
    "xtask",
]
default-members = ["xtask"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
cortex-m-rt = { git = "https://github.com/rust-embedded/cortex-m" }
