[package]
authors = ["luojia65 <me@luojia.cc>"]
edition = "2021"
readme = "README.md"
name = "secure-app"
version = "0.1.0"

[dependencies]
bitfield = "0.13.2"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.5.6", features = ["exit"] }
volatile-register = "0.2.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "secure-app"
test = false
bench = false
